# komurasoft-blog-samples

./: .gitignore  LICENSE  README.md
ada-generic-programming/: README.md
ada-language-appeal/: README.md
ada-real-time-systems/: README.md  ceiling_locking_demo.adb  execution_time_demo.adb  multiperiodic_demo.adb  protected_queue_demo.adb  ravenscar_demo.adb  ravenscar_pkg.adb  ravenscar_pkg.ads  signal_pkg.adb  signal_pkg.ads  task_priority_demo.adb  timing_events_demo.adb
ada-task-concurrency/: README.md
cpp-cli-wrapper-for-native-dlls/: CppCliWrapperSample.sln  README.md
csharp-async-await-best-practices/: AsyncAwaitBestPractices.sln  README.md
csharp-native-aot-native-dll-from-c-cpp/: NativeAotSample.sln  README.md
csharp-run-powershell-receive-objects/: PowerShellObjects.sln  README.md
dotnet-algebraic-data-types/: AlgebraicDataTypes.sln  README.md
dotnet-gc-or-memory-leak/: GcOrMemoryLeak.sln  README.md
dotnet-generic-host-what-is/: GenericHostSample.csproj  GreetingOptions.cs  GreetingService.cs  Program.cs  README.md  Worker.cs  appsettings.json
dotnet8-dll-typed-vba-com-dscom-tlb/: README.md  VbaTypedComSample.sln
file-integration-locking-best-practices-komurasoft-style/: FileIntegrationLocking.sln  README.md
filesystemwatcher-safe-basics/: FileSystemWatcherSafeBasics.sln  README.md
generic-host-backgroundservice-desktop-app/: DesktopHostSample.sln  README.md
media-foundation-extract-still-image-from-mp4-at-specific-time/: CMakeLists.txt  README.md
media-foundation-extract-still-image-from-mp4-at-specific-time/src/: ExtractFrameFromMp4.cpp
media-foundation-overlay-image-text-on-mp4-frames/: CMakeLists.txt  README.md
media-foundation-overlay-image-text-on-mp4-frames/src/: OverlayMp4.cpp
media-foundation-yuv-to-rgb-conversion-patterns/: CMakeLists.txt  README.md
media-foundation-yuv-to-rgb-conversion-patterns/src/: PatternA_SourceReaderAutoRgb32.cpp  PatternB_ManualYuvToBgra.cpp  YuvPixelToBgra.h
media-foundation-yuv-to-rgb-conversion-patterns/tests/: MfStub.h  TestYuvPixelToBgra.cpp
periodictimer-system-threading-timer-dispatchertimer-guide/: README.md  TimerSelection.sln
pester-powershell-test-maintenance/: .gitignore  README.md
powershell-command-basics/: README.md
powershell-practical-command-recipes/: README.md
powershell-script-log-maintenance-automation/: README.md
roslyn-dotnet-compiler-platform/: README.md  RoslynCompilerPlatform.sln
tcp-message-framing/: FrameSender.cs  LengthPrefixedProtocol.cs  LengthPrefixedProtocolWriter.cs  Program.cs  README.md  TcpMessageFraming.csproj
tcp-send-receive-message-framing/: README.md  TcpMessageFraming.sln
vbscript-deprecation-vba-excel-macro-internal-tools-audit-guide/: .gitignore  README.md
(+405 files in other folders)
